--- a/CSS/estilo.css
+++ b/CSS/estilo.css
@@ -1,4 +1,5 @@
 body{
     text-align: center;
-    font-family: monospace;
+    font-family: Arial, Helvetica, sans-serif;
+    color: deeppink;
 }
